<resources>
    <string name="app_name">Brain training game</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="novice">Novice</string>
    <string name="easy">Easy</string>
    <string name="ok">OK</string>
    <string name="medium">Medium</string>
    <string name="guru">Guru</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="del">DEL</string>
    <string name="hash">#</string>
    <string name="minus">-</string>
    <string name="question_mark">\?</string>
    <string name="guess_text">Guess:</string>
    <string name="preferences">Preferences</string>
    <string name="hints">Hints</string>
    <string name="about_para">You shall be presented with an mathematical problem, which will depend on the level of skill you choose. You must type in the answer to the questions within the time limit. You may use the hints option in the preferences menu to help you with the game.</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="secs">secs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greater">Greater</string>
    <string name="lesser">Lesser</string>
    <string name="correct_answer">CORRECT</string>
    <string name="wrong_answer">WRONG</string>
    <string name="score">Score</string>
    <string name="play_again">Play again</string>
    <string name="change_level">Change level</string>
    <string name="main_menu">Main menu</string>
    <string name="unanswered">Unanswered</string>
    <string name="save_game_Head">Save game</string>
    <string name="save_game_body">Do you wish to save your game?</string>
    <string name="instruction_head">Instructions</string>
    <string name="instruction_body">You shall be presented with an mathematical problem, which will depend on the level of skill you choose.\n\nYou must type in the answer to the questions within the time limit.\n\nYou may use the hints option in the preferences menu to help you with the game.</string>
    <string name="stop_game">Stop game</string>
    <string name="stop_text">Do you want to stop the current game?</string>
</resources>
