<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coursework.com.braingame.GameActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <Button
        android:text="@string/three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button10"
        android:layout_toEndOf="@+id/button10"
        android:id="@+id/button11"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonThreeClicked"/>

    <Button
        android:text="@string/nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button17"
        android:layout_alignBaseline="@+id/button16"
        android:layout_alignBottom="@+id/button16"
        android:layout_toEndOf="@+id/button16"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonNineClicked"/>

    <Button
        android:text="@string/five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button13"
        android:layout_alignBaseline="@+id/button12"
        android:layout_alignBottom="@+id/button12"
        android:layout_toEndOf="@+id/button12"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonFiveClicked"/>

    <Button
        android:text="@string/four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button12"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/button10"
        android:layout_alignStart="@+id/button5"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonFourClicked"/>

    <Button
        android:text="@string/seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button15"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/button13"
        android:layout_toStartOf="@+id/button16"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonSevenClicked"/>

    <Button
        android:text="@string/del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/button18"
        android:layout_below="@+id/button15"
        android:layout_alignStart="@+id/button15"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonDelClicked"/>

    <Button
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button19"
        android:layout_alignBaseline="@+id/button18"
        android:layout_alignBottom="@+id/button18"
        android:layout_toEndOf="@+id/button18"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonZeroClicked"/>

    <Button
        android:text="@string/hash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button19"
        android:layout_toEndOf="@+id/button19"
        android:id="@+id/button20"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonHashClicked"/>

    <Button
        android:text="@string/six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button14"
        android:layout_alignBaseline="@+id/button13"
        android:layout_alignBottom="@+id/button13"
        android:layout_toEndOf="@+id/button13"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonSixClicked"/>

    <Button
        android:text="@string/eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button16"
        android:layout_alignBaseline="@+id/button15"
        android:layout_alignBottom="@+id/button15"
        android:layout_toEndOf="@+id/button12"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonEightClicked"/>

    <Button
        android:text="@string/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button20"
        android:layout_toEndOf="@+id/button20"
        android:id="@+id/button21"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonMinusClicked"/>

    <Button
        android:text="@string/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button10"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:onClick="onButtonTwoClicked"/>

    <Button
        android:text="@string/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button.Small"
        android:onClick="onButtonOneClicked"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:text="@string/question_mark"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/guess_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@android:style/TextAppearance"
        android:textSize="24sp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="51dp"
        android:layout_above="@+id/button5"
        android:layout_toStartOf="@+id/button10" />

    <TextView
        android:text="CORRECT!!!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginBottom="42dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:layout_above="@+id/editText"
        android:layout_toStartOf="@+id/button19" />

    <TextView
        android:text="@string/time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="14sp"
        android:layout_marginStart="29dp"
        android:layout_above="@+id/textView6"
        android:layout_toEndOf="@+id/button19" />

    <TextView
        android:text="@string/secs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignEnd="@+id/textView7"
        android:textSize="18sp" />

    <TextView
        android:text="8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toStartOf="@+id/textView8"
        android:layout_marginEnd="13dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:id="@+id/progressBar5"
        android:layout_alignEnd="@+id/textView8"
        android:layout_toEndOf="@+id/button19" />

</RelativeLayout >
