<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coursework.com.braingame.LevelFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/novice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="73dp"
            android:id="@+id/button6"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="noviceButtonClicked"/>

        <Button
            android:text="@string/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:id="@+id/button7"
            android:layout_below="@+id/button6"
            android:layout_alignStart="@+id/button6"
            android:onClick="easyButtonClicked"/>

        <Button
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:id="@+id/button8"
            android:layout_below="@+id/button7"
            android:layout_alignStart="@+id/button7"
            android:onClick="mediumButtonClicked"/>

        <Button
            android:text="@string/guru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:layout_below="@+id/button8"
            android:layout_alignStart="@+id/button8"
            android:layout_marginTop="51dp"
            android:onClick="guruButtonClicked"/>
    </RelativeLayout>
</FrameLayout>
