
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="coursework.com.braingame.MainActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
        </LinearLayout>

        <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:onClick="exitButtonClicked"
            android:layout_marginBottom="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/button2"
            android:layout_alignEnd="@+id/button3" />

        <Button
            android:text="@string/continue_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="continueButtonClicked"
            android:layout_marginBottom="50dp"
            android:layout_above="@+id/button2"
            android:layout_alignStart="@+id/button2" />

        <Button
            android:text="@string/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:onClick="newGameButtonClicked"
            android:layout_marginBottom="55dp"
            android:layout_above="@+id/button3"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:onClick="aboutButtonClicked"
            android:layout_marginBottom="48dp"
            android:layout_above="@+id/button4"
            android:layout_alignStart="@+id/button2" />
    </RelativeLayout>
