<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="coursework.com.braingame.ScoreActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="88dp"
        android:id="@+id/textView10"
        android:textSize="24sp" />

    <TextView
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="103dp"
        android:id="@+id/textView5"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button22"
        android:onClick="playAgain"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp" />

    <Button
        android:text="@string/change_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button23"
        android:onClick="changeLevel"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/button22"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button24"
        android:onClick="goToMainMenue"
        android:layout_marginTop="76dp"
        android:layout_alignTop="@+id/button23"
        android:layout_alignEnd="@+id/button22" />
</RelativeLayout>
